--- a/public/index.html
+++ b/public/index.html
@@ -1,59 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.0.0/dist/phaser.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.10.1/dist/phaser.min.js"></script>
 </head>
+
 <body>
 
-    <script>
-    var config = {
-        type: Phaser.AUTO,
-        width: 800,
-        height: 600,
-        physics: {
-            default: 'arcade',
-            arcade: {
-                gravity: { y: 200 }
-            }
-        },
-        scene: {
-            preload: preload,
-            create: create
-        }
-    };
+    <!-- Preload all assets -->
+    <script src="js/preload.js"></script>
 
-    var game = new Phaser.Game(config);
+    <!-- Create -->
+    <script src="js/create.js"></script>
 
-    function preload ()
-    {
-        this.load.setBaseURL('http://labs.phaser.io');
+    <!-- Update -->
+    <script src="js/update.js"></script>
 
-        this.load.image('sky', 'assets/skies/space3.png');
-        this.load.image('logo', 'assets/sprites/phaser3-logo.png');
-        this.load.image('red', 'assets/particles/red.png');
-    }
 
-    function create ()
-    {
-        this.add.image(400, 300, 'sky');
-
-        var particles = this.add.particles('red');
-
-        var emitter = particles.createEmitter({
-            speed: 100,
-            scale: { start: 1, end: 0 },
-            blendMode: 'ADD'
-        });
-
-        var logo = this.physics.add.image(400, 100, 'logo');
-
-        logo.setVelocity(100, 200);
-        logo.setBounce(1, 1);
-        logo.setCollideWorldBounds(true);
-
-        emitter.startFollow(logo);
-    }
-    </script>
-
+    <!-- Start the game -->
+    <script src="js/start.js"></script>
 </body>
+
 </html>
